# n-furiko

./: .gitignore
rusty-furiko/: Cargo.toml  index.js  package-lock.json
rusty-furiko/src/: furiko.rs  lib.rs  main.rs  mechanics.rs
