[package]
name = "rusty-furiko"
version = "0.1.0"
authors = ["Daiju Nakayama <42.daiju@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra = "*"
wasm-bindgen = "=0.2.34"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
]
